frontends/web/src/components/copy/Copy.css
.button {
    position: absolute;
    top: 10px;
    right: var(--spacing-default);
    border: none;
    width: 18px;
    height: 18px;
    min-width: 18px !important;
    padding: 0;
    border-radius: 50%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin-top: var(--spacing-half);
    cursor: pointer;
    transition: background-color ease 0.2s;
    will-change: background-color;
}

.button img {
    width: 18px;
}

.button:focus {
    outline: none;
}

.button:disabled {
    cursor: not-allowed;
}

.success {
    background-color: var(--color-success) !important;
}

.container {
    position: relative;
}

.inputField {
    flex: 1;
    margin-bottom: 0;
    font-size: var(--size-default);
    font-weight: 400;
    min-width: 200px !important;
    width: 100%;
    padding: var(--space-half) calc(var(--space-half) * 3) var(--space-half) var(--space-half);
    height: 52px;
    border-radius: 2px;
    border: solid 1px var(--color-lightgray);
    resize: none;
}

@media screen and (min-width: 640px) {
    .inputField {
        text-align: center;
    }
}

.inputField:focus {
    outline: solid 1px var(--color-blue);
}

@media screen and (max-width: 640px) {
    .button {
        margin-left: var(--space-quarter);
    }
}

.flexibleHeight {
    height: auto;
}

